WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
222780
Fix flex-aspect-ratio-009.html
https://bugs.webkit.org/show_bug.cgi?id=222780
Summary
Fix flex-aspect-ratio-009.html
Rob Buis
Reported
2021-03-04 22:06:32 PST
Fix flex-aspect-ratio-009.html.
Attachments
Patch
(3.40 KB, patch)
2021-03-04 22:11 PST
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Patch
(3.58 KB, patch)
2021-03-05 00:08 PST
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2021-03-04 22:11:03 PST
Created
attachment 422336
[details]
Patch
Rob Buis
Comment 2
2021-03-05 00:08:18 PST
Created
attachment 422340
[details]
Patch
Sergio Villar Senin
Comment 3
2021-03-05 01:45:25 PST
Comment on
attachment 422340
[details]
Patch nice catch!
EWS
Comment 4
2021-03-05 01:50:31 PST
Committed
r273952
: <
https://commits.webkit.org/r273952
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 422340
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-03-05 01:51:15 PST
<
rdar://problem/75085461
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug