Fix flex-aspect-ratio-009.html https://bugs.webkit.org/show_bug.cgi?id=222780

Patch by Rob Buis <rbuis@igalia.com> on 2021-03-05
Reviewed by Sergio Villar Senin.

Source/WebCore:

Since CSS aspect-ratio does not rely on intrinsic size for
calculating the ratio, the check for intrinsic height should
not apply to it.

* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::childCrossSizeShouldUseContainerCrossSize const):

LayoutTests:

Enable test that passes now.

* TestExpectations:

Canonical link: https://commits.webkit.org/234900@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273952 268f45cc-cd09-0410-ab3c-d52691b4dbfc